--- a/index.html
+++ b/index.html
@@ -307,11 +307,14 @@
     <div data-backdrop-sign class="backdrop-sign is-hidden">
        
         <div class="modal-sign">
-            <button data-toggle-backdrop-sign>
+            <button class="close-btn" data-toggle-backdrop-sign>
                 <svg class="backdrop-modal-btn">
                     <use href="./images/icons/symbol-defs.svg#icon-cross" width="30" height="30"></use>
                 </svg>
             </button>
+            <input class="input-name" type="text" name="name">
+            <input class="input-tel" type="tel" name="tel">
+            <textarea class="message-area" name="msg"></textarea>
         </div>
 
 
